Fix myvariantinfo empty prompt

--- a/client/src/app/views/variants/variants-detail/variants-summary/variants-summary.page.html
+++ b/client/src/app/views/variants/variants-detail/variants-summary/variants-summary.page.html
@@ -301,7 +301,7 @@
           </ng-container>
           <ng-template #noVariantInfo>
             <nz-card nzTitle="MyVariantInfo" >
-              <cvc-empty-revisable notification="Not available, provide HGVS coordinates"> </cvc-empty-revisable>
+              <cvc-empty-revisable notification="Not available, provide Representative Variant Coordinates"> </cvc-empty-revisable>
             </nz-card>
           </ng-template>
         </span>
