For count table columns, change the default order in which the sorting is executed

--- a/client/src/app/components/clinical-trials/clinical-trials-table/clinical-trials-table.component.html
+++ b/client/src/app/components/clinical-trials/clinical-trials-table/clinical-trials-table.component.html
@@ -22,6 +22,7 @@
           nzRight
           [nzColumnKey]="sortColumns.SourceCount"
           [nzSortFn]="true"
+          [nzSortDirections]="['descend', 'ascend', null]"
           nz-tooltip
           nzTooltipTitle="Source Count">
           <i nz-icon nzType="civic:source"></i>
@@ -30,6 +31,7 @@
           nzRight
           [nzColumnKey]="sortColumns.EvidenceItemCount"
           [nzSortFn]="true"
+          [nzSortDirections]="['descend', 'ascend', null]"
           nz-tooltip
           nzTooltipTitle="Evidence Count">
           <i nz-icon nzType="civic:evidence"></i>
