--- a/client/src/app/components/evidence/evidence-table/evidence-table.component.html
+++ b/client/src/app/components/evidence/evidence-table/evidence-table.component.html
@@ -91,6 +91,7 @@
         </th>
         <th nzWidth="5%"
           [nzColumnKey]="sortColumns.EvidenceRating"
+          [nzSortDirections]="['descend', 'ascend', null]"
           [nzSortFn]="true"
           nzAlign="center"
           nz-tooltip
