--- a/client/src/app/components/assertions/assertions-table/assertions-table.component.html
+++ b/client/src/app/components/assertions/assertions-table/assertions-table.component.html
@@ -73,6 +73,7 @@
         <th nzWidth="3%"
           [nzColumnKey]="sortColumns.EvidenceItemsCount"
           [nzSortFn]="true"
+          [nzSortDirections]="['descend', 'ascend', null]"
           nz-tooltip
           nzTooltipTitle="Evidence Count"><i nz-icon
             nzType="civic:evidence"></i>
