For count table columns, change the default order in which the sorting is executed

--- a/client/src/app/components/evidence/evidence-table/evidence-table.component.html
+++ b/client/src/app/components/evidence/evidence-table/evidence-table.component.html
@@ -112,6 +112,7 @@
           <th nzWidth="60px"
             nzRight
             [nzColumnKey]="sortColumns.EvidenceRating"
+            [nzSortDirections]="['descend', 'ascend', null]"
             [nzSortFn]="true"
             nzAlign="center"
             nz-tooltip
