--- a/client/src/app/components/evidence/evidence-table/evidence-table.component.html
+++ b/client/src/app/components/evidence/evidence-table/evidence-table.component.html
@@ -6,13 +6,13 @@
   <!-- adjust nz-table's cvcAutoHeightTable to ensure that table's column header rows are not clipped when table is scrolled to bottom -->
   <ng-container>
     <nz-table #virtualTable
-      [cvcAutoHeightTable]="27"
       nzSize="small"
+      [cvcAutoHeightTable]="27"
       [nzVirtualForTrackBy]="trackByIndex"
       [nzVirtualItemSize]="29"
       [nzData]="evidence$ | ngrxPush"
       [nzLoading]="isLoading"
-      [nzScroll]="{ x: '400px', y: '800px' }"
+      [nzScroll]="{ x: '400px', y: '200px' }"
       [nzFrontPagination]="false"
       [nzShowPagination]="false">
       <thead (nzSortOrderChange)="onSortChanged($event)">
@@ -55,7 +55,8 @@
             [nzSortFn]="true">
             Drugs
           </th>
-          <th nzWidth="60px" nzRight
+          <th nzWidth="60px"
+            nzRight
             [nzColumnKey]="sortColumns.Description"
             nzAlign="center"
             [nzSortFn]="true"
@@ -63,7 +64,8 @@
             nzTooltipTitle="Evidence Description">
             DESC
           </th>
-          <th nzWidth="60px" nzRight
+          <th nzWidth="60px"
+            nzRight
             [nzColumnKey]="sortColumns.EvidenceLevel"
             [nzSortFn]="true"
             nzAlign="center"
@@ -71,7 +73,8 @@
             nzTooltipTitle="Evidence Level">
             EL
           </th>
-          <th nzWidth="60px" nzRight
+          <th nzWidth="60px"
+            nzRight
             [nzColumnKey]="sortColumns.EvidenceType"
             [nzSortFn]="true"
             nzAlign="center"
@@ -79,7 +82,8 @@
             nzTooltipTitle="Evidence Type">
             ET
           </th>
-          <th nzWidth="60px" nzRight
+          <th nzWidth="60px"
+            nzRight
             [nzColumnKey]="sortColumns.EvidenceDirection"
             [nzSortFn]="true"
             nzAlign="center"
@@ -87,7 +91,8 @@
             nzTooltipTitle="Evidence Direction">
             ED
           </th>
-          <th nzWidth="60px" nzRight
+          <th nzWidth="60px"
+            nzRight
             [nzColumnKey]="sortColumns.ClinicalSignificance"
             [nzSortFn]="true"
             nzAlign="center"
@@ -95,7 +100,8 @@
             nzTooltipTitle="Clinical Significance">
             CS
           </th>
-          <th nzWidth="60px" nzRight
+          <th nzWidth="60px"
+            nzRight
             [nzColumnKey]="sortColumns.VariantOrigin"
             [nzSortFn]="true"
             nzAlign="center"
@@ -103,7 +109,8 @@
             nzTooltipTitle="Variant Origin">
             VO
           </th>
-          <th nzWidth="60px" nzRight
+          <th nzWidth="60px"
+            nzRight
             [nzColumnKey]="sortColumns.EvidenceRating"
             [nzSortFn]="true"
             nzAlign="center"
@@ -136,11 +143,13 @@
             <cvc-clearable-input-filter [(inputModel)]="drugNameInput"
               [onInputChanged]="textInputCallback"></cvc-clearable-input-filter>
           </th>
-          <th nzAlign="center" nzRight>
+          <th nzAlign="center"
+            nzRight>
             <cvc-clearable-input-filter [(inputModel)]="descriptionInput"
               [onInputChanged]="textInputCallback"></cvc-clearable-input-filter>
           </th>
-          <th nzAlign="center" nzRight>
+          <th nzAlign="center"
+            nzRight>
             <nz-select nzAllowClear
               nzPlaceHolder="All"
               [nzDropdownMatchSelectWidth]="false"
@@ -158,7 +167,8 @@
                 nzLabel="E"></nz-option>
             </nz-select>
           </th>
-          <th nzAlign="center" nzRight>
+          <th nzAlign="center"
+            nzRight>
             <nz-select nzAllowClear
               nzPlaceHolder="All"
               [nzDropdownMatchSelectWidth]="false"
@@ -178,7 +188,8 @@
                 nzLabel="Functional"></nz-option>
             </nz-select>
           </th>
-          <th nzAlign="center" nzRight>
+          <th nzAlign="center"
+            nzRight>
             <nz-select nzAllowClear
               nzPlaceHolder="All"
               [nzDropdownMatchSelectWidth]="false"
@@ -193,7 +204,8 @@
                 nzLabel="N/A"></nz-option>
             </nz-select>
           </th>
-          <th nzAlign="center" nzRight>
+          <th nzAlign="center"
+            nzRight>
             <nz-select nzAllowClear
               nzPlaceHolder="All"
               [nzDropdownMatchSelectWidth]="false"
@@ -245,151 +257,165 @@
                 <nz-option nzValue="DOMINANT_NEGATIVE"
                   nzLabel="Dominant Negative"></nz-option>,
                 <nz-option nzValue="UNKNOWN"
-                nzLabel="Unknown"></nz-option>
-            </nz-option-group>
-          </nz-select>
-        </th>
-        <th nzAlign="center" nzRight>
-          <nz-select nzAllowClear
-            nzPlaceHolder="All"
-            [nzDropdownMatchSelectWidth]="false"
-            (ngModelChange)="onModelChanged()"
-            [(ngModel)]="variantOriginInput">
-            <nz-option nzValue="SOMATIC"
-              nzLabel="Somatic"></nz-option>
-            <nz-option nzValue="RARE_GERMLINE"
-              nzLabel="Rare Germline"></nz-option>
-            <nz-option nzValue="COMMON_GERMLINE"
-              nzLabel="Common Germline"></nz-option>
-            <nz-option nzValue="UNKNOWN"
-              nzLabel="Unkown"></nz-option>
-            <nz-option nzValue="NA"
-              nzLabel="N/A"></nz-option>
-            <nz-option nzValue="GERMLINE_OR_SOMATIC"
-              nzLabel="Germline or Somatic"></nz-option>
-          </nz-select>
-        </th>
-        <th nzAlign="center" nzRight>
-          <nz-select nzAllowClear
-            nzPlaceHolder="All"
-            [nzDropdownMatchSelectWidth]="false"
-            (ngModelChange)="onModelChanged()"
-            [(ngModel)]="evidenceRatingInput">
-            <nz-option [nzValue]="1"
-              nzLabel="1"></nz-option>
-            <nz-option [nzValue]="2"
-              nzLabel="2"></nz-option>
-            <nz-option [nzValue]="3"
-              nzLabel="3"></nz-option>
-            <nz-option [nzValue]="4"
-              nzLabel="4"></nz-option>
-            <nz-option [nzValue]="5"
-              nzLabel="5"></nz-option>
-          </nz-select>
-        </th>
+                  nzLabel="Unknown"></nz-option>
+              </nz-option-group>
+            </nz-select>
+          </th>
+          <th nzAlign="center"
+            nzRight>
+            <nz-select nzAllowClear
+              nzPlaceHolder="All"
+              [nzDropdownMatchSelectWidth]="false"
+              (ngModelChange)="onModelChanged()"
+              [(ngModel)]="variantOriginInput">
+              <nz-option nzValue="SOMATIC"
+                nzLabel="Somatic"></nz-option>
+              <nz-option nzValue="RARE_GERMLINE"
+                nzLabel="Rare Germline"></nz-option>
+              <nz-option nzValue="COMMON_GERMLINE"
+                nzLabel="Common Germline"></nz-option>
+              <nz-option nzValue="UNKNOWN"
+                nzLabel="Unkown"></nz-option>
+              <nz-option nzValue="NA"
+                nzLabel="N/A"></nz-option>
+              <nz-option nzValue="GERMLINE_OR_SOMATIC"
+                nzLabel="Germline or Somatic"></nz-option>
+            </nz-select>
+          </th>
+          <th nzAlign="center"
+            nzRight>
+            <nz-select nzAllowClear
+              nzPlaceHolder="All"
+              [nzDropdownMatchSelectWidth]="false"
+              (ngModelChange)="onModelChanged()"
+              [(ngModel)]="evidenceRatingInput">
+              <nz-option [nzValue]="1"
+                nzLabel="1"></nz-option>
+              <nz-option [nzValue]="2"
+                nzLabel="2"></nz-option>
+              <nz-option [nzValue]="3"
+                nzLabel="3"></nz-option>
+              <nz-option [nzValue]="4"
+                nzLabel="4"></nz-option>
+              <nz-option [nzValue]="5"
+                nzLabel="5"></nz-option>
+            </nz-select>
+          </th>
         </tr>
       </thead>
-      <!-- without tbody ngIf, cdk-virtual-scroll-content-wrapper doesn't fill the available
-      horizontal space, so the first time rows are rendered, they do not fill the entire table.
-      waiting to render the tbody until data exists to render the rows fixes this issue.-->
-    <tbody *ngIf="(evidence$ | ngrxPush).length > 0">
-      <ng-template nz-virtual-scroll
-        let-eid
-        let-index="index">
-        <tr class="data-row">
-          <td *ngIf="mode == 'select'"
-            nzLeft>
-            <label nz-checkbox
-              [nzChecked]="this.selectedEvidenceIds.has(eid.id)"
-              (nzCheckedChange)="onEvidenceCheckboxClicked($event, eid)"></label>
-          </td>
-          <td nzLeft>
-            <cvc-evidence-tag [evidence]="eid"></cvc-evidence-tag>
-          </td>
-          <td *ngIf="displayGeneAndVariant">
-            <cvc-gene-tag [gene]="eid.gene"
-              [truncateLongName]="true"></cvc-gene-tag>
-          </td>
-          <td *ngIf="displayGeneAndVariant">
-            <cvc-variant-tag [variant]="eid.variant"
-              [truncateLongName]="true"></cvc-variant-tag>
-          </td>
-          <td>
-            <ng-container *ngIf="eid.disease; else diseaseElse">
-              <cvc-disease-tag [disease]="eid.disease"
-                [truncateLongName]="true"></cvc-disease-tag>
-            </ng-container>
-            <ng-template #diseaseElse>
-              <i>N/A</i>
-            </ng-template>
-          </td>
-          <td>
-            <div *ngIf="eid.drugs.length > 0; else drugsElse">
-              <cvc-tag-list>
-                <ng-container *ngIf="eid.drugs.length > 1">
-                  <nz-tag>{{ eid.drugInteractionType.substring(0,3) }}</nz-tag>
-                </ng-container>
-                <ng-container *ngFor="let drug of eid.drugs">
-                  <cvc-drug-tag [drug]="drug"
-                    [truncateLongName]="true"></cvc-drug-tag>
-                </ng-container>
-              </cvc-tag-list>
-            </div>
-            <ng-template #drugsElse>
-              <i>N/A</i>
-            </ng-template>
-          </td>
-          <td nzAlign="center" nzRight>
-            <i nz-icon
-              nzType="align-left"
-              nz-tooltip
-              nzTooltipPlacement="top"
-              [nzTooltipTitle]="eid.description"></i>
-          </td>
-          <td nzAlign="center" nzRight>
-            {{ eid.evidenceLevel }}
-          </td>
-          <td nzAlign="center" nzRight>
-            <i nz-icon
-              [nzType]="eid.evidenceType | evidenceEnumDisplay: 'icon-name'"
-              nz-tooltip
-              nzTooltipPlacement="top"
-              [nzTooltipTitle]="eid.evidenceType | evidenceEnumDisplay"></i>
-          </td>
-          <td nzAlign="center" nzRight>
-            <i nz-icon
-              [nzType]="eid.evidenceDirection | evidenceEnumDisplay: 'icon-name'"
-              nz-tooltip
-              nzTooltipPlacement="top"
-              [nzTooltipTitle]="eid.evidenceDirection | evidenceEnumDisplay"></i>
-          </td>
-          <td nzAlign="center" nzRight>
-            <i nz-icon
-              [nzType]="eid.clinicalSignificance| evidenceEnumDisplay: 'icon-name'"
-              nz-tooltip
-              nzTooltipPlacement="top"
-              [nzTooltipTitle]="eid.clinicalSignificance | evidenceEnumDisplay"></i>
-          </td>
-          <td nzAlign="center" nzRight>
-            <i nz-icon
-              [nzType]="eid.variantOrigin| evidenceEnumDisplay: 'icon-name'"
-              nz-tooltip
-              nzTooltipPlacement="top"
-              [nzTooltipTitle]="eid.variantOrigin | evidenceEnumDisplay"></i>
-          </td>
-          <td nzAlign="center" nzRight>
-            {{ eid.evidenceRating }}
-            <i nz-icon
-              nzType="star"
-              nzTheme="fill"
-              nz-tooltip
-              nzTooltipPlacement="top"></i>
-          </td>
-        </tr>
-      </ng-template>
-    </tbody>
-  </nz-table>
-</ng-container>
+      <!-- must wait until after view init to show table, or else virtual-scroll container
+      only shows the first 15-20 rows -->
+      <tbody>
+
+      <!-- this works, but throws three errors before length func non-null -->
+      <!-- <tbody *ngIf="(evidence$ | ngrxPush).length > 0"> -->
+
+      <!-- showTbody set to true in AfterViewInit fills table properly -->
+        <!-- <tbody *ngIf="showTbody"> -->
+        <ng-template nz-virtual-scroll
+          let-eid
+          let-index="index">
+          <tr class="data-row">
+            <td *ngIf="mode == 'select'"
+              nzLeft>
+              <label nz-checkbox
+                [nzChecked]="this.selectedEvidenceIds.has(eid.id)"
+                (nzCheckedChange)="onEvidenceCheckboxClicked($event, eid)"></label>
+            </td>
+            <td nzLeft>
+              <cvc-evidence-tag [evidence]="eid"></cvc-evidence-tag>
+            </td>
+            <td *ngIf="displayGeneAndVariant">
+              <cvc-gene-tag [gene]="eid.gene"
+                [truncateLongName]="true"></cvc-gene-tag>
+            </td>
+            <td *ngIf="displayGeneAndVariant">
+              <cvc-variant-tag [variant]="eid.variant"
+                [truncateLongName]="true"></cvc-variant-tag>
+            </td>
+            <td>
+              <ng-container *ngIf="eid.disease; else diseaseElse">
+                <cvc-disease-tag [disease]="eid.disease"
+                  [truncateLongName]="true"></cvc-disease-tag>
+              </ng-container>
+              <ng-template #diseaseElse>
+                <i>N/A</i>
+              </ng-template>
+            </td>
+            <td>
+              <div *ngIf="eid.drugs.length > 0; else drugsElse">
+                <cvc-tag-list>
+                  <ng-container *ngIf="eid.drugs.length > 1">
+                    <nz-tag>{{ eid.drugInteractionType.substring(0,3) }}</nz-tag>
+                  </ng-container>
+                  <ng-container *ngFor="let drug of eid.drugs">
+                    <cvc-drug-tag [drug]="drug"
+                      [truncateLongName]="true"></cvc-drug-tag>
+                  </ng-container>
+                </cvc-tag-list>
+              </div>
+              <ng-template #drugsElse>
+                <i>N/A</i>
+              </ng-template>
+            </td>
+            <td nzAlign="center"
+              nzRight>
+              <i nz-icon
+                nzType="align-left"
+                nz-tooltip
+                nzTooltipPlacement="top"
+                [nzTooltipTitle]="eid.description"></i>
+            </td>
+            <td nzAlign="center"
+              nzRight>
+              {{ eid.evidenceLevel }}
+            </td>
+            <td nzAlign="center"
+              nzRight>
+              <i nz-icon
+                [nzType]="eid.evidenceType | evidenceEnumDisplay: 'icon-name'"
+                nz-tooltip
+                nzTooltipPlacement="top"
+                [nzTooltipTitle]="eid.evidenceType | evidenceEnumDisplay"></i>
+            </td>
+            <td nzAlign="center"
+              nzRight>
+              <i nz-icon
+                [nzType]="eid.evidenceDirection | evidenceEnumDisplay: 'icon-name'"
+                nz-tooltip
+                nzTooltipPlacement="top"
+                [nzTooltipTitle]="eid.evidenceDirection | evidenceEnumDisplay"></i>
+            </td>
+            <td nzAlign="center"
+              nzRight>
+              <i nz-icon
+                [nzType]="eid.clinicalSignificance| evidenceEnumDisplay: 'icon-name'"
+                nz-tooltip
+                nzTooltipPlacement="top"
+                [nzTooltipTitle]="eid.clinicalSignificance | evidenceEnumDisplay"></i>
+            </td>
+            <td nzAlign="center"
+              nzRight>
+              <i nz-icon
+                [nzType]="eid.variantOrigin| evidenceEnumDisplay: 'icon-name'"
+                nz-tooltip
+                nzTooltipPlacement="top"
+                [nzTooltipTitle]="eid.variantOrigin | evidenceEnumDisplay"></i>
+            </td>
+            <td nzAlign="center"
+              nzRight>
+              {{ eid.evidenceRating }}
+              <i nz-icon
+                nzType="star"
+                nzTheme="fill"
+                nz-tooltip
+                nzTooltipPlacement="top"></i>
+            </td>
+          </tr>
+        </ng-template>
+      </tbody>
+    </nz-table>
+  </ng-container>
 </nz-card>
 
 <ng-template #titleTemplate>
