--- a/client/src/themes/overrides/card-table.overrides.less
+++ b/client/src/themes/overrides/card-table.overrides.less
@@ -26,5 +26,8 @@ tr.filter-row th.ant-table-cell {
 
 tr.data-row td.ant-table-cell {
   // to ensure uniform row height, cell content will be clipped instead of wrapped
-  white-space: nowrap;
+ white-space: nowrap;
+ .anticon.attribute-icon {
+   color: #595959;
+ }
 }
