--- a/client/src/app/components/evidence/evidence-table/evidence-table.component.html
+++ b/client/src/app/components/evidence/evidence-table/evidence-table.component.html
@@ -362,7 +362,7 @@
               nzRight>
               <nz-tag nz-tooltip
                 nzTooltipPlacement="top"
-                [nzTooltipTitle]="eid.description">
+                [nzTooltipTitle]="showTooltips ? eid.description : ''">
                 <i nz-icon
                   nzType="align-left"></i>
               </nz-tag>
@@ -371,7 +371,7 @@
               nzRight>
               <nz-tag nz-tooltip
                 nz-placement="top"
-                [nzTooltipTitle]="eid.evidenceLevel + ' - ' + (eid.evidenceLevel | evidenceLevelDisplay)">
+                [nzTooltipTitle]="showTooltips ? eid.evidenceLevel + ' - ' + (eid.evidenceLevel | evidenceLevelDisplay) : ''">
                 {{ eid.evidenceLevel }}
               </nz-tag>
             </td>
@@ -379,7 +379,7 @@
               nzRight>
               <nz-tag nz-tooltip
                 nzTooltipPlacement="top"
-                [nzTooltipTitle]="eid.evidenceType | evidenceEnumDisplay">
+                [nzTooltipTitle]="showTooltips ? (eid.evidenceType | evidenceEnumDisplay) : ''">
                 <i nz-icon
                   [nzType]="eid.evidenceType | evidenceEnumDisplay: 'icon-name'"
                   class="attribute-icon"></i>
@@ -389,7 +389,7 @@
               nzRight>
               <nz-tag nz-tooltip
                 nzTooltipPlacement="top"
-                [nzTooltipTitle]="eid.evidenceDirection | evidenceEnumDisplay">
+                [nzTooltipTitle]="showTooltips ? (eid.evidenceDirection | evidenceEnumDisplay) : ''">
                 <i nz-icon
                   [nzType]="eid.evidenceDirection | evidenceEnumDisplay: 'icon-name'"
                   class="attribute-icon"></i>
