evidence-table shows notification if loadMore attempted w/ no additional results available

--- a/client/src/app/components/evidence/evidence-table/evidence-table.component.html
+++ b/client/src/app/components/evidence/evidence-table/evidence-table.component.html
@@ -448,6 +448,10 @@
     nzType="secondary">
     ({{totalCount}} total, showing {{visibleCount}}<span *ngIf="totalCount && filteredCount < totalCount"> of {{filteredCount}} filtered</span>)
   </span>
+  <nz-tag nzColor="warning" *ngIf="noMoreRows$ | ngrxPush">
+    <i nz-icon nzType="exclamation-circle"></i>
+    <span>End of results reached</span>
+  </nz-tag>
   <ng-template #noData>
     <span nz-typography
       nzType="secondary">
