--- a/client/src/app/components/revisions/revision-list-diff/revision-list-diff.component.html
+++ b/client/src/app/components/revisions/revision-list-diff/revision-list-diff.component.html
@@ -3,12 +3,17 @@
     <!-- show original items -->
     <nz-list nzHeader="Original {{ entityType }} List" nzBordered nzType="inner" nzSize="small">
       <nz-list-item *ngFor="let item of this.diffObject.currentObjects" ngClass="current">
-        <span nz-typography>
-          <ng-container
-            [ngTemplateOutlet]="itemTemplateRef || null"
-            [ngTemplateOutletContext]="{ $implicit: item }">
+          <ng-container *ngIf="!item.deleted; else deleted">
+            <span nz-typography>
+                <ng-container
+                  [ngTemplateOutlet]="itemTemplateRef || null"
+                  [ngTemplateOutletContext]="{ $implicit: item }">
+                </ng-container>
+            </span>
           </ng-container>
-        </span>
+          <ng-template #deleted>
+            <nz-tag nzColor="error">Deleted {{ item.entityType | camelToWords }} {{ item.id }}</nz-tag>
+          </ng-template>
       </nz-list-item>
       <nz-list-empty *ngIf="this.diffObject.currentObjects.length === 0"
         nzNoResult="No {{ entityType }}"></nz-list-empty>
@@ -20,12 +25,17 @@
       <ng-container *ngIf="this.diffObject.currentObjects.length > 0" >
         <nz-list nzHeader="Removed {{ entityType }}" nzBordered nzType="inner" nzSize="small" *nzSpaceItem>
           <nz-list-item *ngFor="let item of this.diffObject.removedObjects" ngClass="removed">
+          <ng-container *ngIf="!item.deleted; else deleted">
             <span nz-typography>
               <ng-container
                 [ngTemplateOutlet]="itemTemplateRef || null"
                 [ngTemplateOutletContext]="{ $implicit: item }">
               </ng-container>
             </span>
+            </ng-container>
+            <ng-template #deleted>
+              <nz-tag nzColor="error">Deleted {{ item.entityType | camelToWords }} {{ item.id }}</nz-tag>
+            </ng-template>
           </nz-list-item>
           <nz-list-empty *ngIf="this.diffObject.removedObjects.length === 0"
             nzNoResult="No {{ entityType }} Removed"></nz-list-empty>
@@ -34,12 +44,17 @@
       <!-- show added items -->
       <nz-list nzHeader="Added {{ entityType }}" nzBordered nzType="inner" nzSize="small" *nzSpaceItem>
         <nz-list-item *ngFor="let item of this.diffObject.addedObjects" ngClass="added">
-          <span nz-typography>
-            <ng-container
-              [ngTemplateOutlet]="itemTemplateRef || null"
-              [ngTemplateOutletContext]="{ $implicit: item }">
-            </ng-container>
-          </span>
+          <ng-container *ngIf="!item.deleted; else deleted">
+            <span nz-typography>
+              <ng-container
+                [ngTemplateOutlet]="itemTemplateRef || null"
+                [ngTemplateOutletContext]="{ $implicit: item }">
+              </ng-container>
+            </span>
+          </ng-container>
+          <ng-template #deleted>
+            <nz-tag nzColor="error">Deleted {{ item.entityType | camelToWords}} {{ item.id }}</nz-tag>
+          </ng-template>
         </nz-list-item>
         <nz-list-empty *ngIf="this.diffObject.addedObjects.length === 0"
           nzNoResult="No {{ entityType }} Added"></nz-list-empty>
@@ -47,12 +62,17 @@
       <ng-container *ngIf="this.diffObject.currentObjects.length > 0">
         <nz-list nzHeader="Kept {{ entityType }}" nzBordered nzType="inner" nzSize="small" *nzSpaceItem>
           <nz-list-item *ngFor="let item of this.diffObject.keptObjects" ngClass="kept">
-            <span nz-typography>
-              <ng-container
-                [ngTemplateOutlet]="itemTemplateRef || null"
-                [ngTemplateOutletContext]="{ $implicit: item }">
-              </ng-container>
-            </span>
+            <ng-container *ngIf="!item.deleted; else deleted">
+              <span nz-typography>
+                <ng-container
+                  [ngTemplateOutlet]="itemTemplateRef || null"
+                  [ngTemplateOutletContext]="{ $implicit: item }">
+                </ng-container>
+              </span>
+            </ng-container>
+            <ng-template #deleted>
+              <nz-tag nzColor="error">Deleted {{ item.entityType | camelToWords }} {{ item.id }}</nz-tag>
+            </ng-template>
           </nz-list-item>
           <nz-list-empty *ngIf="this.diffObject.keptObjects.length === 0"
             nzNoResult="No {{ entityType }} Kept"></nz-list-empty>
@@ -64,12 +84,17 @@
     <!-- show final list -->
     <nz-list nzHeader="Revised {{ entityType }} List" nzBordered nzType="inner" nzSize="small">
       <nz-list-item *ngFor="let item of this.diffObject.suggestedObjects" ngClass="suggested">
-        <span nz-typography>
-          <ng-container
-            [ngTemplateOutlet]="itemTemplateRef || null"
-            [ngTemplateOutletContext]="{ $implicit: item }">
-          </ng-container>
-        </span>
+        <ng-container *ngIf="!item.deleted; else deleted">
+          <span nz-typography>
+            <ng-container
+              [ngTemplateOutlet]="itemTemplateRef || null"
+              [ngTemplateOutletContext]="{ $implicit: item }">
+            </ng-container>
+          </span>
+        </ng-container>
+        <ng-template #deleted>
+          <nz-tag nzColor="error">Deleted {{ item.entityType | camelToWords }} {{ item.id }}</nz-tag>
+        </ng-template>
       </nz-list-item>
       <nz-list-empty *ngIf="this.diffObject.suggestedObjects.length === 0"
         nzNoResult="No {{ entityType }}"></nz-list-empty>
