also fall back on name in select

--- a/client/src/app/forms/config/types/source-input/source-selector/source-selector-typeahead/source-selector-typeahead.type.html
+++ b/client/src/app/forms/config/types/source-input/source-selector/source-selector-typeahead/source-selector-typeahead.type.html
@@ -12,7 +12,7 @@
     nzCustomContent
     [nzLabel]="opt.label"
     [nzValue]="opt.value">
-    {{ opt.source.citation }} ({{ opt.source.citationId }})
+    {{ opt.source.citation ? opt.source.citation :  opt.source.name }} ({{ opt.source.citationId }})
   </nz-option>
 </nz-select>
 <div class="ant-form-item-explain"
